Ensure ReloadIfTerminated can find extension ID for a terminated extension

r498971 changed ReloadIfTerminated from looking up the extension ID
directly from the site URL's host(), to using the
GetExtensionIdFromFrame helper.  Unfortunately, the latter isn't
exactly equivalent: it returns the ID of an extension that it looks up
via active_extensions(), which fails for terminated extensions.

Instead, change GetExtensionIdFromFrame to just return the RFH's site
URL's host(), the way it used to work for ReloadIfTerminated.  Also
have GetExtensionFromFrame use this as a helper.

Bug: 763808
Change-Id: Ibc19ff484573f764732ffe13cc5f9d5d25b13999