extensions/browser/extension_web_contents_observer.cc
@@ -88,13 +88,6 @@ content::WebContents* ExtensionWebContentsObserver::GetAssociatedWebContents()
 
 void ExtensionWebContentsObserver::RenderFrameCreated(
     content::RenderFrameHost* render_frame_host) {
-  InitializeRenderFrame(render_frame_host);
-
-  // Optimization: Look up the extension API frame ID to force the mapping to be
-  // cached. This minimizes the number of IO->UI->IO thread hops when the ID is
-  // looked up again on the IO thread for the webRequest API.
-  ExtensionApiFrameIdMap::Get()->CacheFrameData(render_frame_host);
-
   const Extension* extension = GetExtensionFromFrame(render_frame_host, false);
   if (!extension)
     return;
@@ -133,6 +126,13 @@ void ExtensionWebContentsObserver::RenderFrameCreated(
         ->ActivateExtensionInProcess(*extension,
                                      render_frame_host->GetProcess());
   }
+
+  InitializeRenderFrame(render_frame_host);
+
+  // Optimization: Look up the extension API frame ID to force the mapping to be
+  // cached. This minimizes the number of IO->UI->IO thread hops when the ID is
+  // looked up again on the IO thread for the webRequest API.
+  ExtensionApiFrameIdMap::Get()->CacheFrameData(render_frame_host);
 }
 
 void ExtensionWebContentsObserver::RenderFrameDeleted(
@@ -205,12 +205,11 @@ void ExtensionWebContentsObserver::PepperInstanceDeleted() {
 
 std::string ExtensionWebContentsObserver::GetExtensionIdFromFrame(
     content::RenderFrameHost* render_frame_host) const {
-  // The second argument is false because |render_frame_host| need not be an
-  // active RenderFrameHost (crbug.com/567277).
-  // TODO(robwu): If there is a method to check whether |render_frame_host| is
-  // an active host, use it.
-  const Extension* extension = GetExtensionFromFrame(render_frame_host, false);
-  return extension ? extension->id() : std::string();
+  const GURL& site = render_frame_host->GetSiteInstance()->GetSiteURL();
+  if (!site.SchemeIs(kExtensionScheme))
+    return std::string();
+
+  return site.host();
 }
 
 const Extension* ExtensionWebContentsObserver::GetExtensionFromFrame(
@@ -220,7 +219,10 @@ const Extension* ExtensionWebContentsObserver::GetExtensionFromFrame(
   if (!site_url.SchemeIs(kExtensionScheme))
     return nullptr;
 
-  const std::string& extension_id = site_url.host();
+  std::string extension_id = GetExtensionIdFromFrame(render_frame_host);
+  if (extension_id.empty())
+    return nullptr;
+
   content::BrowserContext* browser_context =
       render_frame_host->GetProcess()->GetBrowserContext();
   const Extension* extension = ExtensionRegistry::Get(browser_context)
